# topicos-ia-1er-parcial-2025

./: .env.docker  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py  predictor.py
