[project]
name = "topicos-ia-1er-parcial-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "opencv-python>=4.12.0.88",
    "pydantic-settings>=2.11.0",
    "shapely>=2.1.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.205",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
